--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,12 +5,13 @@ theme:
   logo: img/logo.png
 
 markdown_extensions:
+  - markdown.extensions.footnotes
   - pymdownx.arithmatex:
       generic: true
 
 extra_javascript:
   - javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg-full.js
 
 plugins: []
